--- a/weblog/Front/contact.html
+++ b/weblog/Front/contact.html
@@ -1,19 +1,17 @@
 <!doctype html>
 <html lang="en">
-  <head>
-  	<title>Contact Form 01</title>
+<head>
+	<title>Contact Form 01</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	</head>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+</head>
 	<body>
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-md-6 text-center mb-5">
-					<h2 class="heading-section">Contact Form #01</h2>
-				</div>
 			</div>
 			<div class="row justify-content-center">
 				<div class="col-lg-10 col-md-12">
