--- a/weblog/Front/contact.html
+++ b/weblog/Front/contact.html
@@ -21,29 +21,26 @@
 								<div class="contact-wrap w-100 p-md-5 p-4">
 									<h3 class="mb-4">Get in touch</h3>
 									<div id="form-message-warning" class="mb-4"></div>
-				      		<div id="form-message-success" class="mb-4">
-				            Your message was sent, thank you!
-				      		</div>
 									<form method="POST" id="contactForm" name="contactForm">
 										<div class="row">
-											<div class="col-md-6">
+											<div class="col-md-6 mb-4">
 												<div class="form-group">
-													<input type="text" class="form-control" name="name" id="name" placeholder="Name">
+													<input type="text" class="form-control" name="Name" id="name" placeholder="Name">
 												</div>
 											</div>
-											<div class="col-md-6">
+											<div class="col-md-6 mb-4">
 												<div class="form-group">
-													<input type="email" class="form-control" name="email" id="email" placeholder="Email">
+													<input type="email" class="form-control" name="Email" id="email" placeholder="Email">
 												</div>
 											</div>
-											<div class="col-md-12">
+											<div class="col-md-12 mb-4">
 												<div class="form-group">
-													<input type="text" class="form-control" name="subject" id="subject" placeholder="Subject">
+													<input type="text" class="form-control" name="Subject" id="subject" placeholder="Subject">
 												</div>
 											</div>
-											<div class="col-md-12">
+											<div class="col-md-12 mb-4">
 												<div class="form-group">
-													<textarea name="message" class="form-control" id="message" cols="30" rows="7" placeholder="Message"></textarea>
+													<textarea name="Message" class="form-control" id="message" cols="30" rows="7" placeholder="Message"></textarea>
 												</div>
 											</div>
 											<div class="col-md-12">
@@ -59,23 +56,7 @@
 							<div class="col-md-5 d-flex align-items-stretch">
 								<div class="info-wrap bg-primary w-100 p-lg-5 p-4">
 									<h3 class="mb-4 mt-md-4">Contact us</h3>
-				        	<div class="dbox w-100 d-flex align-items-start">
-				        		<div class="icon d-flex align-items-center justify-content-center">
-				        			<span class="fa fa-map-marker"></span>
-				        		</div>
-				        		<div class="text pl-3">
-					            <p><span>Address:</span> 198 West 21th Street, Suite 721 New York NY 10016</p>
-					          </div>
-				          </div>
-				        	<div class="dbox w-100 d-flex align-items-center">
-				        		<div class="icon d-flex align-items-center justify-content-center">
-				        			<span class="fa fa-phone"></span>
-				        		</div>
-				        		<div class="text pl-3">
-					            <p><span>Phone:</span> <a href="tel://1234567920">+ 1235 2355 98</a></p>
-					          </div>
-				          </div>
-				        	<div class="dbox w-100 d-flex align-items-center">
+				        	<div class="box w-100 d-flex align-items-center">
 				        		<div class="icon d-flex align-items-center justify-content-center">
 				        			<span class="fa fa-paper-plane"></span>
 				        		</div>
@@ -83,12 +64,12 @@
 					            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
 					          </div>
 				          </div>
-				        	<div class="dbox w-100 d-flex align-items-center">
+				        	<div class="box w-100 d-flex align-items-center">
 				        		<div class="icon d-flex align-items-center justify-content-center">
 				        			<span class="fa fa-globe"></span>
 				        		</div>
 				        		<div class="text pl-3">
-					            <p><span>Website</span> <a href="#">yoursite.com</a></p>
+					            <p><span>Website</span> <a href="#">your site.com</a></p>
 					          </div>
 				          </div>
 			          </div>
