--- a/weblog/Front/contact.html
+++ b/weblog/Front/contact.html
@@ -10,7 +10,7 @@
 </head>
 	<body>
 	<section class="ftco-section">
-		<div class="container">
+		<div class="container" style="padding-top: 7%">
 			<div class="row justify-content-center">
 			</div>
 			<div class="row justify-content-center">
@@ -57,24 +57,17 @@
 								<div class="info-wrap bg-primary w-100 p-lg-5 p-4">
 									<h3 class="mb-4 mt-md-4">Contact us</h3>
 				        	<div class="box w-100 d-flex align-items-center">
-				        		<div class="icon d-flex align-items-center justify-content-center">
-				        			<span class="fa fa-paper-plane"></span>
-				        		</div>
 				        		<div class="text pl-3">
-					            <p><span>Email:</span> <a href="mailto:info@yoursite.com">info@yoursite.com</a></p>
+					            <p><span>Email:</span> <a href="mailto:info@yoursite.com" style="color: aliceblue">info@yoursite.com</a></p>
 					          </div>
 				          </div>
 				        	<div class="box w-100 d-flex align-items-center">
-				        		<div class="icon d-flex align-items-center justify-content-center">
-				        			<span class="fa fa-globe"></span>
-				        		</div>
 				        		<div class="text pl-3">
-					            <p><span>Website</span> <a href="#">your site.com</a></p>
+					            <p><span>Website: </span> <a href="#" style="color: aliceblue">  your site.com</a></p>
 					          </div>
 				          </div>
 			          </div>
 							</div>
-						</div>
 					</div>
 				</div>
 			</div>
