--- a/weblog/Front/about.html
+++ b/weblog/Front/about.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="home.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Posts</a>
@@ -51,7 +51,6 @@
 <div class="row" style="text-align:center">
   <div class="col-xs-4">
     <div class="card">
-      <img src="/w3images/team1.jpg" alt="Jane">
       <h2>Mr Rezanejad</h2>
       <p>Some text that describes me lorem ipsum ipsum lorem.</p>
       <p>rezanejad@example.com</p>
@@ -59,7 +58,6 @@
   </div>
   <div class="col-xs-4">
     <div class="card">
-      <img src="/w3images/team2.jpg" alt="Mike">
       <h2>Mr Rezai</h2>
       <p>Some text that describes me lorem ipsum ipsum lorem.</p>
       <p>rezai@example.com</p>
@@ -67,7 +65,6 @@
   </div>
   <div class="col-xs-4">
     <div class="card">
-      <img src="/w3images/team3.jpg" alt="John">
       <h2>Mr Naseh</h2>
       <p>Some text that describes me lorem ipsum ipsum lorem.</p>
       <p>naseh@example.com</p>
@@ -77,7 +74,6 @@
 <div class="row" style="text-align:center">
     <div class="col-xs-4">
     <div class="card">
-      <img src="/w3images/team3.jpg" alt="John">
       <h2>Ms Mohammadi</h2>
       <p>Some text that describes me lorem ipsum ipsum lorem.</p>
       <p>mohammadi@example.com</p>
@@ -85,7 +81,6 @@
   </div>
     <div class="col-xs-4">
     <div class="card">
-      <img src="/w3images/team3.jpg" alt="John">
       <h2>Ms Alinejad</h2>
       <p>Some text that describes me lorem ipsum ipsum lorem.</p>
       <p>alinejad@example.com</p>
