--- a/weblog/Front/home.html
+++ b/weblog/Front/home.html
@@ -11,7 +11,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
           <h3>Group Five</h3>
-          <button class="navbar-toggler" type="button"
+          <button class="navbar-toggle" type="button"
                   data-mdb-toggle="collapse" data-mdb-target="#navbarColor02"
                   aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
             <i class="fas fa-bars"></i>
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarColor02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item active">
-                <a class="nav-link" aria-current="page" href="#">Home</a>
+                <a class="nav-link" aria-current="page" href="home.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Posts</a>
@@ -41,7 +41,5 @@
           </ul>
         </div>
       </nav>
-
-</nav>
 </body>
 </html>
